infer/tests/codetoanalyze/cpp/errors/constructors/copy_move_constructor.cpp
../../frontend/constructors/copy_move_constructor.cpp